--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^6.22.3",
     "clsx": "^2.0.0",
     "tailwind-merge": "^2.2.1",
-    "zustand": "^4.5.0"
+    "zustand": "^4.5.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
