--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
     "tailwind-merge": "^2.2.1",
-    "zod": "^3.22.4",
+    "zod": "3.25.28",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
