feat: implement reports functionality

--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
   "dependencies": {
     "axios": "^1.6.7",
     "clsx": "^2.0.0",
+    "file-saver": "2.0.5",
+    "jspdf": "3.0.1",
+    "jspdf-autotable": "5.0.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
     "tailwind-merge": "^2.2.1",
+    "xlsx": "0.18.5",
     "zod": "3.25.28",
     "zustand": "^4.5.0"
   },
@@ -32,6 +36,7 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/file-saver": "2.0.7",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
